fix height of pokemon display to avoid layout shift  when pokemon loads in

--- a/components/WhoIsThatPokemon/HiddenPokemonDisplay/HiddenPokemonDisplay.module.css
+++ b/components/WhoIsThatPokemon/HiddenPokemonDisplay/HiddenPokemonDisplay.module.css
@@ -2,13 +2,16 @@
   display: grid;
   background-color: darkblue;
   border-radius: 10px;
-  max-width: 450px;
-  max-height: 400px;
+  width: 450px;
+  height: 300px;
   margin: 20px;
   align-content: space-evenly;
   padding: 20px;
   background-image:url(./whosthatpokemon.webp);
   background-size:contain;
+  @media screen and (max-width: 450px) {
+    width: 100%;
+  }
 }
 
 .pokemonDisplayContainer {
